@@ -1,6 +1,8 @@
 <div class="daviz-tab-view" tal:attributes="id view/tabname">
   <div ex:role="facet" ex:facetClass="TextSearch" ex:facetLabel="Live search"></div>
   <div class="daviz-views" ex:role="viewPanel">
+  <div tal:define="lens python:view.lens"
+    tal:condition="lens" tal:replace="structure lens" />
   <div ex:role="view"
     ex:viewClass="Tabular"
     ex:cellSpacing="0"
