@@ -3,6 +3,9 @@ Changelog
 
 4.3-dev - (unreleased)
 ----------------------
+* Feature: Added possibility to customize lenses for all exhibit views not only
+  for Tile View
+  [voineali fixes #5112]
 * Feature: Added unique URLs for exhibit tabs in order to easily bookmark and
   share them. Also support browser history (back and forward buttons)
   [voineali refs #4851]
